# rand_aes

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: rng.rs
scripts/: run_verification.sh  validate.sh
src/: implementation.rs  lib.rs  runtime.rs  seeds.rs  tls.rs  traits.rs  verification.rs
src/backend/: aarch64.rs  mod.rs  riscv64.rs  soft.rs  x86.rs
src/fallback/: fixed.rs  mod.rs  runtime.rs  software.rs
src/hardware/: aarch64.rs  mod.rs  riscv64.rs  x86.rs  x86_64.rs
tests/: aes128_ctr128.rs  aes128_ctr64.rs  aes256_ctr128.rs  aes256_ctr64.rs  api.rs  jump.rs  tls.rs
verification/: Cargo.toml
