[package]
name = "verification"
version = "0.1.0"
edition = "2021"
publish = false

[features]
experimental_riscv = ["rand_aes/experimental_riscv"]
force_runtime_detection = ["rand_aes/force_runtime_detection"]
force_software = ["rand_aes/force_software"]

[dependencies]
rand_aes = { path = "..", default-features = false, features = ["verification"] }

[[bin]]
name = "verification"
path = "src/bin/verification.rs"
